This file contains a summary of important user-visible changes.

Changes since CVC4 1.8
======================

New Features:
* SymFPU is now a required dependency.
* New unsat-core production modes based on the new proof infrastructure
  (`--unsat-cores-mode=sat-proof`) and on the solving-under-assumption feature
  of Minisat (`--unsat-cores-mode=assumptions`). The mode based on SAT
  assumptions + preprocessing proofs is the new default.
* A new parametric theory of sequences whose syntax is compatible with the
  syntax for sequences used by Z3.
* Arrays: Added support for an `eqrange` predicate. `(eqrange a b i j)` is true
  if arrays `a` and `b` are equal on all indices within indices `i` and `j`.
* Support for an integer operator `(_ iand n)` that returns the bitwise `and`
  of two integers, seen as integers modulo n.
* Strings:
  * Support for `str.indexof_re(s, r, n)`, which returns the index of the first
    occurrence of a regular expression `r` in a string `s` after index `n` or
    -1 if `r` does not match a substring after `n`.

Improvements:
* New API: Added functions to retrieve the heap/nil term when using separation
  logic.

Changes:
* SyGuS: Removed support for SyGuS-IF 1.0.
* Removed Java and Python bindings for the legacy API
* Interactive shell: the GPL-licensed Readline library has been replaced the
  BSD-licensed Editline. Compiling with `--best` now enables Editline, instead
  of Readline. Without selecting optional GPL components, Editline-enabled CVC4
  builds will be BSD licensed.
* The semantics for division and remainder operators in the CVC language now
  correspond to SMT-LIB 2.6 semantics (i.e. a division by zero or a zero
  modulus results in a constant value, instead of an uninterpreted one). As a
  result the option `--bv-div-zero-const` has been removed. Similarly, when no
  language is set, the API semantics now correspond to the SMT-LIB 2.6
  semantics.