@@ -1,4 +1,3 @@
-; REQUIRES: cadical
 ; COMMAND-LINE: --incremental --bv-sat-solver=cadical --bitblast=eager
 (set-logic QF_BV)
 (set-option :incremental true)
